--- a/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.html
+++ b/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.html
@@ -40,6 +40,10 @@
 				</ng-container>
 			</mat-menu>
 		</ng-container>
+
+		<div class="app-event-tile__draft-print" *ngIf="isDraft">
+			<span>DRAFT</span>
+		</div>
 	
 		<ul class="app-event-tile__status-list">
 			<h4 class="app-event-tile__status-title">Status:</h4>
