fix(gandalf/frontend): moving user store to auth

--- a/frontend/src/app/libs/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/libs/user-profile-page/user-profile-page.component.html
@@ -39,7 +39,7 @@
             <button mat-raised-button (click)="updateUserInfo()">Save changes</button>
         </div>
         <div>
-            <button mat-raised-button (click)="backFromUserProfilePage()">Cancel</button>
+            <button mat-raised-button>Cancel</button>
         </div>
     </div>
 </form>
