--- a/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.html
+++ b/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.html
@@ -2,7 +2,7 @@
 		[class.app-event-tile--draft]="isDraft">
 		
 	<div class="app-event-tile__container">
-		<h3 class="app-event-tile__title" [attr.title]="name"> {{ name }} </h3>
+		<h3 class="app-event-tile__title" [title]="name"> {{ name }} </h3>
 
 		<ng-container *ngIf="endDate else inProgressTime">
 			<div class="app-event-tile__date-time">
