--- a/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.html
+++ b/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.html
@@ -4,31 +4,18 @@
 	<div class="app-event-tile__container">
 		<h3 class="app-event-tile__title" [title]="name"> {{ name }} </h3>
 
-		<ng-container *ngIf="endDate else inProgressTime">
-			<div class="app-event-tile__date-time">
-				<time class="app-event-tile__date">
-					<span>{{ startDate | date:'d MMM yy' }}</span>
-					<span> - </span>
-					<span>{{ endDate | date:'d MMM yy' }}</span>
-				</time>
-				<time class="app-event-tile__time" *ngIf="startTime && endTime">
-					<span>{{ startTime | date:'h:mm a' }}</span>
-					<span> - </span>
-					<span>{{ endTime | date:'h:mm a' }}</span>
-				</time>
-			</div>
-		</ng-container>
-	
-		<ng-template #inProgressTime>
-			<div class="app-event-tile__date-time">
-				<time class="app-event-tile__date">
-					<span>{{ startDate | date:'d MMM yy' }}</span>
-				</time>
-				<div class="app-event-tile__time app-event-tile__time--in-progress">
-					<span>In Progress</span>
-				</div>
-			</div>
-		</ng-template>
+		<div class="app-event-tile__date-time">
+			<app-event-date class="app-event-tile__date"
+					[startDate]="startDate" 
+					[endDate]="endDate">
+			</app-event-date>
+			<app-event-time class="app-event-tile__time" 
+					*ngIf="startTime && endTime" 
+					[startTime]="startTime" 
+					[endTime]="endTime"
+					[isEventInProgress]="endDate">
+			</app-event-time>
+		</div>
 		
 		<ng-container *ngIf="menuItems && menuItems.length >= 1">
 			<button mat-icon-button class="app-event-tile__menu-button" aria-label="Event tile menu" title="Menu" [matMenuTriggerFor]="menu">
