--- a/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.scss
+++ b/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.scss
@@ -1,5 +1,7 @@
 .app-event-tile {
   width: 100%;
+	height: 100%;
+	min-height: 117px;
   padding: 16px 18px;
 
   font-size: 14px;
@@ -13,6 +15,12 @@
 
   &__container {
     position: relative;
+
+    display: flex;
+    flex-flow: column nowrap;
+    width: inherit;
+		height: inherit;
+		min-height: inherit;
   }
 
   &__draft-print {
@@ -72,8 +80,8 @@
     display: inline-flex;
     flex-flow: row wrap;
     align-items: baseline;
-    margin: 0;
-    margin-top: 22px;
+		margin-top: auto;
+    margin-bottom: 0;
     padding: 0;
   }
 
