--- a/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.html
+++ b/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.html
@@ -1,7 +1,7 @@
 <section class="app-event-tile" [class.app-event-tile--draft]="isDraft">
 	<div class="app-event-tile__container">
 
-		<h3 class="app-event-tile__title" [title]="name"> {{ name }} </h3>
+		<h3 class="app-event-tile__title"> {{ name }} </h3>
 
 		<div class="app-event-tile__date-time">
 			<app-event-date class="app-event-tile__date" [startDate]="startDateTime" [endDate]="endDateTime"></app-event-date>
@@ -9,7 +9,7 @@
 		</div>
 		
 		<ng-container *ngIf="menuItems && menuItems.length >= 1">
-			<button mat-icon-button class="app-event-tile__menu-button" aria-label="Event tile menu" title="Menu" [matMenuTriggerFor]="tileMenu">
+			<button mat-icon-button class="app-event-tile__menu-button" aria-label="Event tile menu" [matMenuTriggerFor]="tileMenu">
 				<mat-icon>more_vert</mat-icon>
 			</button>
 			<mat-menu #tileMenu>
