--- a/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.html
+++ b/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.html
@@ -9,7 +9,7 @@
 		</div>
 		
 		<ng-container *ngIf="menuItems && menuItems.length >= 1">
-			<button mat-icon-button class="app-event-tile__menu-button" aria-label="Event tile menu" [matMenuTriggerFor]="tileMenu">
+			<button mat-icon-button class="app-event-tile__menu-button" [matMenuTriggerFor]="tileMenu">
 				<mat-icon>more_vert</mat-icon>
 			</button>
 			<mat-menu #tileMenu>
