--- a/frontend/src/app/libs/common-components/components/event-time/event-time.component.html
+++ b/frontend/src/app/libs/common-components/components/event-time/event-time.component.html
@@ -1,11 +1,11 @@
-<time class="app-event-time" *ngIf="isEventInProgress else inProgressTime">
-	<span>{{ startTime | date: timeFormat }}</span>
-	<span> - </span>
-	<span>{{ endTime | date: timeFormat }}</span>
+<time class="app-event-time app-event-time--in-progress" *ngIf="isEventInProgress else time">
+	<span>In Progress</span>
 </time>
 
-<ng-template #inProgressTime>
-	<time class="app-event-time app-event-time--in-progress">
-		<span>In Progress</span>
+<ng-template #time>
+	<time class="app-event-time">
+		<span>{{ startTime | date: timeFormat }}</span>
+		<span> - </span>
+		<span>{{ endTime | date: timeFormat }}</span>
 	</time>
 </ng-template>
