feat: event-popover with tests

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -519,6 +519,7 @@
   </svg>
 
 </div>
+<button mat-button (click)="openDialog()">Launch dialog</button>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
