--- a/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.scss
+++ b/frontend/src/app/libs/common-components/components/event-tile/event-tile.component.scss
@@ -1,7 +1,8 @@
 .app-event-tile {
+  box-sizing: border-box;
   width: 100%;
-	height: 100%;
-	min-height: 117px;
+  height: 100%;
+  min-height: 117px;
   padding: 16px 18px;
 
   font-size: 14px;
@@ -19,8 +20,8 @@
     display: flex;
     flex-flow: column nowrap;
     width: inherit;
-		height: inherit;
-		min-height: inherit;
+    height: inherit;
+    min-height: inherit;
   }
 
   &__draft-print {
@@ -80,7 +81,7 @@
     display: inline-flex;
     flex-flow: row wrap;
     align-items: baseline;
-		margin-top: auto;
+    margin-top: auto;
     margin-bottom: 0;
     padding: 0;
   }
