feat: add event-tile elements on demo page

--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -1,30 +1,36 @@
 <div class="common-components-demo">
 	<app-components-demo-group groupName="Event Tile">
-		<app-component-demo 
-				[containerWidth]="'300px'" 
-				[containerHeight]="'117px'"
-				[componentName]="'event-tile'"
-				[componentStateNames]="['default', 'draft']"
-				[componentTemplates]="[eventTileDefault, eventTileDraft]">
+		<app-component-demo
+				[name]="'event-tile'"
+				[states]="[{name: 'default', template: eventTileDefault}, {name: 'draft', template: eventTileDraft}]"
+				[container]="eventTileData.container">
 		</app-component-demo>
 	</app-components-demo-group>
 
-	<app-components-demo-group [isDark]="true" [groupName]="'Event Tile'">
-		<app-component-demo 
-				[containerWidth]="'300px'" 
-				[containerHeight]="'117px'"
-				[componentName]="'event-tile'"
-				[componentStateNames]="['default', 'draft']"
-				[componentTemplates]="[eventTileDefault, eventTileDraft]">
+	<app-components-demo-group groupName="Event Tile" [isDark]="true">
+		<app-component-demo
+				[name]="'event-tile'"
+				[states]="[{name: 'default', template: eventTileDefault}, {name: 'draft', template: eventTileDraft}]"
+				[container]="eventTileData.container">
 		</app-component-demo>
 	</app-components-demo-group>
 </div>
 
-
 <ng-template #eventTileDefault>
-	<app-event-tile></app-event-tile>
+	<app-event-tile 
+			name="EDU: Segment Tree"
+			[startDateTime]="eventTileData.startDateTime" 
+			[endDateTime]="eventTileData.endDateTime"
+			[statusList]="eventTileData.statusList">
+	</app-event-tile>
 </ng-template>
 
 <ng-template #eventTileDraft>
-	<app-event-tile [isDraft]="true"></app-event-tile>
+	<app-event-tile 
+			[isDraft]="true"
+			name="EDU: Segment Tree"
+			[startDateTime]="eventTileData.startDateTime" 
+			[endDateTime]="eventTileData.endDateTime"
+			[statusList]="eventTileData.statusList">
+	</app-event-tile>
 </ng-template>
