--- a/frontend/src/app/libs/common-components-demo/components-demo-group/components-demo-group.component.html
+++ b/frontend/src/app/libs/common-components-demo/components-demo-group/components-demo-group.component.html
@@ -1,7 +1,7 @@
 <section class="components-demo-group" [class.components-demo-group--dark]="isDark">
 	<div class="components-demo-group__container">
 		<h1 class="components-demo-group__title">{{groupName}}</h1>
-		<hr>
+		<hr class="components-demo-group__line">
 		<ng-content></ng-content>
 	</div>
 </section>
