feat: add table spacing for demo row

--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -1,3 +1,4 @@
 <div class="common-components-demo">
 	<app-event-tile-demo></app-event-tile-demo>
+	<app-event-tile-demo [isDark]="true"></app-event-tile-demo>
 </div>
