--- a/frontend/src/app/libs/common-components-demo/component-demo-row/component-demo-row.component.html
+++ b/frontend/src/app/libs/common-components-demo/component-demo-row/component-demo-row.component.html
@@ -1,5 +1,5 @@
 <div class="component-demo-row" >
-	<table>
+	<table cellpadding="10px">
 		<thead *ngIf="isHeaderShown">
 			<td></td>
 			<th *ngFor="let state of states" class="component-demo-row__state-name">
@@ -11,8 +11,7 @@
 				<td class="component-demo-row__name">
 					<span>{{name}}</span>
 				</td>
-				<td *ngFor="let state of states"
-						[style.width]="container ? container.width + 'px' : 'auto'">
+				<td *ngFor="let state of states" [style.width]="container ? container.width + 'px' : 'auto'">
 					<ng-container *ngTemplateOutlet="state.template"></ng-container>
 				</td>
 			</tr>
