--- a/frontend/src/app/libs/common-components-demo/component-demo-row/component-demo-row.component.html
+++ b/frontend/src/app/libs/common-components-demo/component-demo-row/component-demo-row.component.html
@@ -13,8 +13,8 @@
 				</td>
 				<td *ngFor="let state of states" 
 						class="component-demo-row__state-container"
-						[height]="container ? container.height : 'auto'"
-						[width]="container ? container.width : 'auto'">
+						[height]="(container && container.height)  ? container.height : 'auto'"
+						[width]="(container && container.width) ? container.width : 'auto'">
 					<ng-container *ngTemplateOutlet="state.template"></ng-container>
 				</td>
 			</tr>
