refactor: deleted class disabled in button and code clearling

--- a/frontend/src/app/libs/common-components/create-draft-event-popover/create-draft-event-popover.component.html
+++ b/frontend/src/app/libs/common-components/create-draft-event-popover/create-draft-event-popover.component.html
@@ -18,9 +18,8 @@
             mat-button 
             class="event-popover__btn"
             type="submit"
-            (click)=submitEventPopover()
-            [disabled]="eventPopoverForm.controls['title'].invalid"
-            [class.disabed]="eventPopoverForm.controls['title'].invalid">
+            (click)="submitEventPopover()"
+            [disabled]="eventPopoverForm.controls['title'].invalid">
             create event
         </button>
     </div>
