feat: add light themed button

--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -1,5 +1,6 @@
 <div class="common-components-demo">
 	<app-event-tile-demo></app-event-tile-demo>
+	<app-button-demo></app-button-demo>
 </div>
 
 
