--- a/frontend/src/app/libs/common-components-demo/demo-group/demo-group.component.scss
+++ b/frontend/src/app/libs/common-components-demo/demo-group/demo-group.component.scss
@@ -3,7 +3,10 @@
   flex-flow: row nowrap;
 
   &__container {
-    padding: 72px 2%;
+    box-sizing: border-box;
+    width: 50%;
+    min-width: 500px;
+    padding: 55px 2%;
 
     &--light-theme {
       & .demo-group__title {
