--- a/frontend/src/app/libs/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/libs/user-profile-page/user-profile-page.component.html
@@ -36,7 +36,7 @@
 
     <div>
         <div>
-            <button mat-raised-button (click)="updateUserInfo()">Save changes</button>
+            <button mat-raised-button (click)="updateUserInfo()" [disabled]="!user">Save changes</button>
         </div>
         <div>
             <button mat-raised-button>Cancel</button>
