--- a/frontend/src/app/libs/common-components-demo/components/button-demo/button-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/button-demo/button-demo.component.html
@@ -24,5 +24,27 @@
 		</div>
 	</div>
 	<div class="dark-theme button-demo__states">
+		<div class="button-demo__active">
+			<app-demo-state [title]="'basic'" class="button-demo__container" [isDark]="true">
+				<app-button [isDark]="true">Button</app-button>
+			</app-demo-state>
+			<app-demo-state [title]="'outlined'" class="button-demo__container" [isDark]="true">
+				<app-button type="outlined" [isDark]="true">Button</app-button>
+			</app-demo-state>
+			<app-demo-state [title]="'flat'" class="button-demo__container" [isDark]="true">
+				<app-button type="flat" [isDark]="true">Button</app-button>
+			</app-demo-state>
+		</div>
+		<div class="button-demo__disabled">
+			<app-demo-state class="button-demo__container" [isDark]="true">
+				<app-button [isDisabled]="true" [isDark]="true">Button</app-button>
+			</app-demo-state>
+			<app-demo-state class="button-demo__container" [isDark]="true">
+				<app-button type="outlined" [isDisabled]="true" [isDark]="true">Button</app-button>
+			</app-demo-state>
+			<app-demo-state class="button-demo__container" [isDark]="true">
+				<app-button type="flat" [isDisabled]="true" [isDark]="true">Button</app-button>
+			</app-demo-state>
+		</div>
 	</div>
 </app-demo-group>
