--- a/frontend/src/app/libs/common-components/components/button/button.component.scss
+++ b/frontend/src/app/libs/common-components/components/button/button.component.scss
@@ -1,21 +1,62 @@
-.button {
-  padding: 3px 16px 0 16px;
+@mixin dark-theme-hover() {
+  transition: background-color 0.3s;
+  &:hover:not([disabled="true"]) {
+    background-color: transparentize($color: white, $amount: 0.92);
+  }
+}
+
+@mixin button {
+  padding: 13px 16px 11px 16px;
 
   font-weight: 500;
   font-size: 14px;
+  line-height: 16px;
   color: rgba(33, 33, 33, 0.75);
   text-transform: uppercase;
   letter-spacing: 1px;
 
   border-radius: 20px;
 
-  &--outlined {
-    border: 1px solid rgba(33, 33, 33, 0.1);
-  }
-
-  &--flat {
+  &--dark-theme {
     color: white;
 
-    background-color: #367ff6;
+    border-color: white;
+
+    &[disabled="true"] {
+      color: transparentize($color: white, $amount: 0.7);
+    }
+  }
+}
+
+.button-basic {
+  @include button();
+	@include dark-theme-hover();
+}
+
+.button-outlined {
+  @include button();
+	@include dark-theme-hover();
+	
+  padding-top: 12px;
+  padding-bottom: 10px;
+
+  border-color: rgba(33, 33, 33, 0.1);
+  &--dark-theme {
+    border-color: transparentize($color: white, $amount: 0.7);
+  }
+}
+
+.button-flat {
+	@include button();
+
+  color: white;
+
+  background-color: #367ff6;
+  border-color: #367ff6;
+
+  &--dark-theme[disabled="true"] {
+    color: transparentize($color: white, $amount: 0.6);
+
+    background-color: transparentize($color: white, $amount: 0.8);
   }
 }
