feat: 1. component slide toggle 2. component demo for slide toggle

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -519,7 +519,7 @@
   </svg>
 
 </div>
-
+<app-slide-toggle-demo></app-slide-toggle-demo>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
