feat: unit test added

--- a/frontend/src/app/libs/common-components/components/slide-toggle/slide-toggle.component.html
+++ b/frontend/src/app/libs/common-components/components/slide-toggle/slide-toggle.component.html
@@ -1,6 +1,5 @@
 <mat-slide-toggle
-    [(ngModel)]="isActive"
-    (ngModelChange)="toggle()"
+    (change)="toggle()"
     color="primary"
     [class.slide-toggle--dark]="isDarkTheme"
     [disabled]="isDisabled">
