--- a/frontend/src/app/libs/common-components-demo/slide-toggle-demo/slide-toggle-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/slide-toggle-demo/slide-toggle-demo.component.html
@@ -1,13 +1,34 @@
-<mat-card
-    [class.dark]="isDark">
-    <mat-card-content>
-        <section class="example-section">
-            <mat-checkbox class="example-margin" color="primary" [(ngModel)]="isDisabled">Disabled</mat-checkbox>
-        </section>
-        <section class="example-section">
-            <mat-checkbox class="example-margin" color="primary" [(ngModel)]="isDark">dark</mat-checkbox>
-        </section>
-
-        <app-slide-toggle [isDisabled]="isDisabled" [isDarkTheme]="isDark" (onToggle)="onToggle($event)"></app-slide-toggle>
-    </mat-card-content>
-</mat-card>
+<app-demo-group class="slide-toggle-demo" [title]="'Slide toggle'">
+    <div class="light-theme slide-toggle-demo__states">
+        <app-demo-state [title]="'active'" [isDark]="false">
+            <app-slide-toggle
+                [isDisabled]="false" 
+                [isDarkTheme]="false" 
+                (onToggle)="onToggle($event)">
+            </app-slide-toggle>
+        </app-demo-state>
+        <app-demo-state [title]="'disabled'">
+            <app-slide-toggle
+                [isDisabled]="true" 
+                [isDarkTheme]="false" 
+                (onToggle)="onToggle($event)">
+            </app-slide-toggle>
+        </app-demo-state>
+    </div>
+    <div class="dark-theme slide-toggle-demo__states">
+        <app-demo-state [title]="'active'" [isDark]="true">
+            <app-slide-toggle
+                [isDisabled]="false" 
+                [isDarkTheme]="true" 
+                (onToggle)="onToggle($event)">
+            </app-slide-toggle>
+        </app-demo-state>
+        <app-demo-state [title]="'disabled'">
+            <app-slide-toggle
+                [isDisabled]="true" 
+                [isDarkTheme]="true" 
+                (onToggle)="onToggle($event)">
+            </app-slide-toggle>
+        </app-demo-state>
+    </div>
+</app-demo-group>
