--- a/frontend/src/app/libs/common-components/components/button/button.component.html
+++ b/frontend/src/app/libs/common-components/components/button/button.component.html
@@ -1,6 +1,6 @@
 <ng-container [ngSwitch]="type">
 	<button 
-			*ngSwitchCase="'basic'" 
+			*ngSwitchCase="basicType" 
 			mat-button 
 			class="button button--basic" 
 			[class.button--dark-theme]="isDark"
@@ -8,7 +8,7 @@
 		<ng-container *ngTemplateOutlet="buttonText"></ng-container>
 	</button>
 	<button 
-			*ngSwitchCase="'outlined'" 
+			*ngSwitchCase="outlinedType" 
 			mat-stroked-button 
 			class="button button--outlined" 
 			[class.button--dark-theme]='isDark'
@@ -16,7 +16,7 @@
 		<ng-container *ngTemplateOutlet="buttonText"></ng-container>
 	</button>
 	<button
-			*ngSwitchCase="'flat'"  
+			*ngSwitchCase="flatType"  
 			mat-flat-button 
 			class="button button--flat"
 			[class.button--dark-theme]='isDark'
