--- a/frontend/src/app/libs/common-components/components/button/button.component.html
+++ b/frontend/src/app/libs/common-components/components/button/button.component.html
@@ -3,7 +3,7 @@
 			*ngSwitchCase="basicType" 
 			mat-button 
 			class="button button--basic" 
-			[class.button--dark-theme]="isDark"
+			[class.button--dark-theme]="theme === darkTheme"
 			[disabled]="disabled">
 		<ng-container *ngTemplateOutlet="buttonText"></ng-container>
 	</button>
@@ -11,7 +11,7 @@
 			*ngSwitchCase="outlinedType" 
 			mat-stroked-button 
 			class="button button--outlined" 
-			[class.button--dark-theme]='isDark'
+			[class.button--dark-theme]="theme === darkTheme"
 			[disabled]="disabled">
 		<ng-container *ngTemplateOutlet="buttonText"></ng-container>
 	</button>
@@ -19,7 +19,7 @@
 			*ngSwitchCase="flatType"  
 			mat-flat-button 
 			class="button button--flat"
-			[class.button--dark-theme]='isDark'
+			[class.button--dark-theme]="theme === darkTheme"
 			[disabled]="disabled">
 		<ng-container *ngTemplateOutlet="buttonText"></ng-container>
 	</button>
