--- a/frontend/src/app/libs/common-components-demo/slide-toggle-demo/slide-toggle-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/slide-toggle-demo/slide-toggle-demo.component.html
@@ -2,6 +2,7 @@
     <div class="light-theme slide-toggle-demo__states">
         <app-demo-state [title]="'active'" [isDark]="false">
             <app-slide-toggle
+                [isActive]="false"
                 [isDisabled]="false" 
                 [isDarkTheme]="false" 
                 (onToggle)="onToggle($event)">
@@ -9,22 +10,25 @@
         </app-demo-state>
         <app-demo-state [title]="'disabled'">
             <app-slide-toggle
+                [isActive]="false"
                 [isDisabled]="true" 
                 [isDarkTheme]="false" 
-                (onToggle)="onToggle($event)">
+                (onToggle)="onToggle($event)"> 
             </app-slide-toggle>
         </app-demo-state>
     </div>
     <div class="dark-theme slide-toggle-demo__states">
         <app-demo-state [title]="'active'" [isDark]="true">
             <app-slide-toggle
+                [isActive]="true"
                 [isDisabled]="false" 
                 [isDarkTheme]="true" 
                 (onToggle)="onToggle($event)">
             </app-slide-toggle>
         </app-demo-state>
-        <app-demo-state [title]="'disabled'">
+        <app-demo-state [title]="'disabled'" [isDark]="true">
             <app-slide-toggle
+                [isActive]="true"
                 [isDisabled]="true" 
                 [isDarkTheme]="true" 
                 (onToggle)="onToggle($event)">
